--- a/.github/workflows/main_mydevopappcd.yml
+++ b/.github/workflows/main_mydevopappcd.yml
@@ -52,6 +52,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'mydevopappCD'
+          app-name: 'mydevopapp'
           slot-name: 'Production'
           package: .
+
