--- a/.github/workflows/main_mydevopappcd.yml
+++ b/.github/workflows/main_mydevopappcd.yml
@@ -6,7 +6,6 @@ on:
     branches:
       - main
   workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,7 +27,6 @@ jobs:
         with:
           name: node-app
           path: .
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -44,9 +42,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_F6A4273DB5744848A9C37E3990C18C06 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_3D004B81858145A487286B1A1F80DC81 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_10772C06CF964F5EA547A7F2B953ABA4 }}
           
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
